auth-api/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: team16
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: auth-api
